// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choose Your Twin room page should execute getServerSideProps with de locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "isError": false,
    "isGuestUser": false,
    "isInnBusinessAppPage": false,
    "isLoading": false,
  },
}
`;

exports[`Choose Your Twin room page should execute getServerSideProps with gb locale 1`] = `
{
  "props": {
    "data": {},
    "error": {
      "message": "",
    },
    "featureToggles": {
      "release_ib_enabled": true,
    },
    "isError": false,
    "isGuestUser": false,
    "isInnBusinessAppPage": true,
    "isLoading": false,
  },
}
`;

exports[`Choose Your Twin room page should match the snapshot 1`] = `
<div>
  <div
    data-testid="SecondaryHDPLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="ChooseTwinroomPage"
      />
    </div>
  </div>
</div>
`;
